vlib/v/checker/tests/modify_const_with_ref.out
g.v:9:6: warning: unused variable: `unused_var`
    7 |
    8 | fn main() {
    9 |     mut unused_var := Foo{}
      |         ~~~~~~~~~~
   10 |     unused_var = Foo{}
   11 |     mut c := &constant
g.v:11:14: error: `constant` is immutable, cannot have a mutable reference to it
    9 |     mut unused_var := Foo{}
   10 |     unused_var = Foo{}
   11 |     mut c := &constant
      |              ^
   12 |     c.value = 200
   13 | }
